--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@elcapitansponge/tysql",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "description": "General purpose mysql utility for typescript",
     "main": "dist/tysql.js",
     "scripts": {
@@ -16,7 +16,8 @@
     },
     "keywords": [
         "MySQL",
-        "TypeScript"
+        "TypeScript",
+        "Javascript"
     ],
     "author": "Andrew Brunker",
     "license": "MIT",
